# wasm-wrap

./: .gitignore  README.md  jsdoc.conf  package-lock.json  package.json
assets/: testup.wasm  wasm_nopackage.wasm  wasm_wrap.js
doc/: WASMInterface.html  index.html  wasm_wrap.js.html
src-client/: Cargo.toml  README.md  build.sh  test.html
src-client/src/: lib.rs
test/: test.html
test/rs_src/: lib.rs
test/testup/: Cargo.toml  build.sh
test/testup/src/: lib.rs
ts/: wasm_wrap.js  wasm_wrap.ts
